fixed some overflow?

--- a/home.css
+++ b/home.css
@@ -58,6 +58,7 @@ span::selection {
     width: 99%;
     flex-direction: column;
     justify-content: center;
+    overflow-x:hidden;
 }
 
 .block > .topbar {
@@ -129,6 +130,7 @@ span::selection {
 }
 
 .topbar > .navbar {
+    overflow:hidden;
     /* outline: 2px solid #3E3C4E; */
     justify-self: flex-end !important;
     color: white;
@@ -166,6 +168,7 @@ span::selection {
 }
 
 .slideout > .slideoutInfoBlock {
+    position: static;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -175,6 +178,7 @@ span::selection {
     pointer-events: all;
     width: 100%;
     height: 100%;
+    
 }
 
 .slideoutInfoBlock:hover {
@@ -192,9 +196,8 @@ span::selection {
     font-family: 'DM Serif Display', serif;
     display: flex;
     margin-left: auto !important;
-    height: 5vh;
-    padding-bottom: 8px;
-    padding-top: 8px;
+    padding-bottom: 6px;
+    padding-top: 6px;
     justify-content: center;
     align-items: center;
     background-color: #d3564d;
